#163  - layout issue fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,7 @@
+body {
+  height: 100%;
+  overflow-y: hidden;
+}
 .indrz-logo {
   position: absolute; /* or absolute */
   bottom: 1%;
